--- a/Módulo 1/Desafios/3. Conversor de Moedas/index.html
+++ b/Módulo 1/Desafios/3. Conversor de Moedas/index.html
@@ -1,35 +1,39 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Conversor de Moedas</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="ui">
-    <main>
-      <h1>
-        Conversor de moedas v1.0
-      </h1>
-      
-      <form action="convertCurrency.php" method="get" autocomplete="on">
-        <fieldset>
-          <legend>
-            Valor a converter
-          </legend>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Conversor de Moedas</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div id="ui">
+      <main>
+        <h1>Conversor de moedas v1.0</h1>
 
-          <div>
-            <label for="dinheiro">Quantos R$ você tem na carteira?</label> <br />
-            <input type="number" name="dinheiro" id="dinheiroId" required>
-          </div>
+        <form action="convertCurrency.php" method="get" autocomplete="on">
+          <fieldset>
+            <legend>Valor a converter</legend>
 
-          <div>
-            <input type="submit" value="Converter">
-          </div>
-        </fieldset>
-      </form>
-    </main>
-  </div>
-</body>
+            <div>
+              <label for="dinheiro">Quantos R$ você tem na carteira?</label>
+              <br />
+              <input
+                type="number"
+                name="dinheiro"
+                id="dinheiroId"
+                required
+                step="0.01"
+              />
+            </div>
+
+            <div>
+              <input type="submit" value="Converter" />
+            </div>
+          </fieldset>
+        </form>
+      </main>
+    </div>
+  </body>
 </html>
